--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mediumish Blog</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mediumish Blog</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -37,7 +37,7 @@
 
 
 
-  
+
     <h2>Review</h2>
     <form action="/action_page.php">
         <label for="name">Name:</label>
@@ -52,7 +52,7 @@
 
 
 
-  
+
     <section id="aboutPage" class="page hidden">
         <h1>About</h1>
         <p>This minimalist blog celebrates clean, distraction-free design.</p>
@@ -67,6 +67,73 @@
         <p>© <span id="footerYear"></span> Mediumish Blog</p>
     </footer>
     <script src="script.js"></script>
+    <h2>Image Gallery</h2>
+
+    <div class="gallery">
+
+        <div class="gallery-item">
+            <a target="_blank" href="img_5terre.jpg">
+                <img src="img_5terre.jpg" alt="Cinque Terre" width="600" height="400">
+            </a>
+            <div class="desc">Cinque Terre</div>
+        </div>
+
+        <div class="gallery-item">
+            <a target="_blank" href="img_forest.jpg">
+                <img src="img_forest.jpg" alt="Forest" width="600" height="400">
+            </a>
+            <div class="desc">Green Forest</div>
+        </div>
+
+        <div class="gallery-item">
+            <a target="_blank" href="img_lights.jpg">
+                <img src="img_lights.jpg" alt="Northern Lights" width="600" height="400">
+            </a>
+            <div class="desc">Northern Lights</div>
+        </div>
+
+        <div class="gallery-item">
+            <a target="_blank" href="img_mountains.jpg">
+                <img src="img_mountains.jpg" alt="Mountains" width="600" height="400">
+            </a>
+            <div class="desc">Mountains</div>
+        </div>
+
+    </div>
+    <div class="slideshow-container">
+
+
+        <div class="mySlides fade">
+            <div class="numbertext">1 / 3</div>
+            <img src="img1.jpg" style="width:100%">
+            <div class="text">Caption Text</div>
+        </div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">2 / 3</div>
+            <img src="img2.jpg" style="width:100%">
+            <div class="text">Caption Two</div>
+        </div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">3 / 3</div>
+            <img src="img3.jpg" style="width:100%">
+            <div class="text">Caption Three</div>
+        </div>
+
+
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+    <br>
+
+
+    <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+    </div>
+
 </body>
 </html>
 
